--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h1>БЛОКНОТ</h1>
-<p class="posttitle">(автосохранения до зачистки истории браузера)</p>
+<p class="posttitle">(автосохранения до зачистки истории в браузереgit branch)</p>
 
 <!-- большой блок для ввода текста: высота в половину, а ширина — во весь экран, назвывается "text_area", обведено рамкой толщиной в 1 пиксель, выравнивание текста — по левому краю -->
 <div id="editor" contenteditable="true" class="editorSheet"></div>
